--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,11 @@ click==8.1.7
 click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
+cloudinary==1.41.0
 coreapi==2.3.3
 coreschema==0.0.4
 Django==5.1.2
+django-cloudinary-storage==0.3.0
 django-cors-headers==3.14.0
 django-rest-swagger==2.2.0
 django-rq==3.0.0
